# neuralflow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  chat_agent.py  content_generator.py  data_analyzer.py  web_scraper.py
backend/app/api/: agents.py  auth.py  tasks.py
backend/app/models/: __init__.py  agent.py  task.py  user.py
backend/app/services/: scheduler.py
backend/tests/: test_api.py
bot/: Dockerfile  requirements.txt
bot/telegram/: bot.py
cli/: README.md  pyproject.toml
cli/neuralflow/: cli.py
docs/: agents.md  api.md  deployment.md  index.md
web/: package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/components/: AgentCard.tsx  Header.tsx
web/lib/: api.ts
