[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neuralflow"
version = "1.0.0"
description = "NeuralFlow AI Automation Platform CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
neuralflow = "neuralflow.cli:cli"

[tool.setuptools.packages.find]
include = ["neuralflow*"]
